cypress_output.txt
node:internal/modules/package_json_reader:93
        throw error;
        ^

SyntaxError: Error parsing /mnt/e/EdpsychConnect/node_modules/mime-types/package.json: Unexpected non-whitespace character after JSON at position 1149
    at parse (<anonymous>)
    at read (node:internal/modules/package_json_reader:80:16)
    at readPackage (node:internal/modules/package_json_reader:141:10)
    at resolveExports (node:internal/modules/cjs/loader:634:15)
    at Module._findPath (node:internal/modules/cjs/loader:711:31)
    at Module._resolveFilename (node:internal/modules/cjs/loader:1193:27)
    at Module._load (node:internal/modules/cjs/loader:1038:27)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at Object.<anonymous> (/mnt/e/EdpsychConnect/node_modules/@cypress/request/request.js:12:12)
    at Module._compile (node:internal/modules/cjs/loader:1521:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18) {
  path: '/mnt/e/EdpsychConnect/node_modules/mime-types/package.json'
}

Node.js v20.19.5
